[package]
name = "mini-mcache"
version = "0.1.0"
edition = "2021"
rust-version = "1.89.0"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
tracing = "0.1"
log = "0.4.22"
env_logger = "0.11.5"
rfd = "0.15.1"